# contextkit

./: .gitignore  JULES_PROMPT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
contextkit/: bundle_builder.py  cli.py  config.py  display.py  formatter.py  graph_resolver.py  indexer.py  relevance.py  token_counter.py
tests/: test_bundle_builder.py  test_cli.py  test_graph_resolver.py  test_indexer.py  test_relevance.py
tests/fixtures/: expected_bundle.md
tests/fixtures/sample_project/: output.md
tests/fixtures/sample_project/auth/: exceptions.py  models.py  validators.py
tests/fixtures/sample_project/payment/: processor.py
tests/fixtures/sample_project/tests/: test_validators.py
