[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextkit"
version = "0.1.0"
description = "Build minimal, maximally relevant code context bundles for AI coding assistants"
authors = [{name = "UA9-TA", email = "vkrmsatsangi@gmail.com"}]
keywords = ["ai", "context", "llm", "developer-tools", "cli", "cursor", "copilot", "claude"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.25",
    "tiktoken>=0.6",
    "pyperclip>=1.8",
    "tomli>=2.0; python_version < '3.11'",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-mock", "pytest-cov"]
semantic = ["sentence-transformers>=2.7"]

[project.scripts]
contextkit = "contextkit.cli:app"

[project.urls]
Homepage = "https://github.com/UA9-TA/contextkit"
Changelog = "https://github.com/UA9-TA/contextkit/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
